# decentralized-messaging-system

./: .clang-tidy  .clangd  .gitignore  LICENSE  README.md  docker-compose.yml  go.sum  include.cmake
.github/workflows/: redis_tests.yml
auth/: go.sum  server.env
auth/cmd/app/: main.go
auth/cmd/auth/: main.go
auth/internal/adapters/crypto/: bcrypt.go
auth/internal/adapters/database/: repo.go
auth/internal/adapters/mongo/: repo.go
auth/internal/app/: app.go  interfaces.go
auth/internal/config/: config.go  errors.go
auth/internal/controllers/: user.go
auth/internal/grpc/: handlers.go  server.go
auth/internal/grpc/server/: server.go
auth/internal/helpers/: auth.go
auth/internal/jwt/: interfaces.go  jwt.go
auth/internal/models/: jwtpair.go  refresh.go  token.go  user.go
client/: CMakeLists.txt  conanfile.txt  main.cc  main.cpp
client/libs/core/: CMakeLists.txt
client/libs/core/include/: core.h  service_impl.h
client/libs/core/src/: core.cc  service_impl.cc
client/libs/utilities/: CMakeLists.txt
client/libs/utilities/include/: consts.h
database/: CMakeLists.txt  database.plantuml  users.sql
database/redis/: CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp  redis.conf
database/redis/configs/conan/: conanfile.txt  run
database/redis/configs/redis-server/: redis.conf  run_server.sh
database/redis/libs/: CMakeLists.txt
database/redis/libs/core/: CMakeLists.txt
database/redis/libs/core/include/: cache-manager.h  cache_manager.h  core.h  redis_service.h
database/redis/libs/core/src/: core.cpp  redis_service.cpp
database/redis/libs/utilities/: CMakeLists.txt
database/redis/libs/utilities/exceptions/include/: context_error.h  nullptr_context_error.h  redis_base_error.h
database/redis/libs/utilities/include/: consts.h
database/redis/tests/: CMakeLists.txt  main.cc
database/redis/tests/include/: cache_manager_test_fixture.h  cache_pair_test_fixture.h
database/redis/tests/src/: test_redis.cc
database/sql/: CMakeLists.txt  CMakePresets.json  Dockerfile  conanfile.txt  database-api.yml  go.sum  go.work.sum  main.cpp  users.sql
database/sql/cmd/database/: main.go
database/sql/config/: database_config.toml
database/sql/configs/: conanfile.txt  run
database/sql/internal/adapters/: database.go  repo.go
database/sql/internal/http/: dto.go  handlers.go  routes.go
database/sql/internal/models/: tables.go
database/sql/libs/: CMakeLists.txt
database/sql/libs/client/: CMakeLists.txt  main.cpp
database/sql/libs/client/include/: client.h
database/sql/libs/client/src/: client.cpp
database/sql/libs/core/: CMakeLists.txt
database/sql/libs/core/include/: core.h  database_service.h  server.h  users_db_manager.h
database/sql/libs/core/src/: database_service.cpp  server.cpp  users_db_manager.cpp
database/sql/libs/core/trash_client/: main.cpp
database/sql/libs/utilities/: CMakeLists.txt
database/sql/libs/utilities/exceptions/include/: base_exception.h  base_soci_exception.h  date_structure_exception.h  insert_number_arguments_exception.h  ip_structure_exception.h  size_of_word_exception.h
database/sql/libs/utilities/include/: consts.h  validation_funcs.h
database/sql/libs/utilities/src/: validation_funcs.cpp
database/sql/nginx/: Dockerfile  nginx.conf  ssl-params.conf
database/sql/protos/: db_sql.proto
database/sql/schemas/: users.sql
database/sql/tests/: CMakeLists.txt  handlers_test.go  main.cc
database/sql/tests/include/: psql_mock_connection.h  users_database_test_fixture.h
database/sql/tests/migrations/: 001_create_users_table.sql  002_insert_test_data.sql  003_drop_users_table.sql
database/sql/tests/src/: test_sql_db.cc
protos/: auth.proto  client.proto  database_redis.proto  db_sql.proto
server/: CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp  run
server/.cache/clangd/index/: core.cpp.C8F1C67425B12B3A.idx  main.cpp.AD9EC78958247181.idx
server/libs/: CMakeLists.txt
server/libs/clients/: CMakeLists.txt
server/libs/clients/include/: cache_client.h  users_db_client.h
server/libs/clients/src/: cache_client.cpp  users_db_client.cpp
server/libs/core/: CMakeLists.txt
server/libs/core/include/: core.h  server.h
server/libs/core/src/: core.cpp  server.cpp
server/libs/grpc_clients/include/: cache_client.h  users_db_client.h
server/libs/grpc_clients/src/: cache_client.cpp  users_db_client.cpp
server/libs/ip_db_connector/: CMakeLists.txt
server/libs/ip_db_connector/include/: ip_database_manager.h  service_runner.h
server/libs/ip_db_connector/src/: ip_database_manager.cpp
server/protos/: auth.proto  client.proto  database.proto  message.proto
